--- a/aboutus.html
+++ b/aboutus.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TDM's WATER</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <script src="jquery.js"></script>
   </head>
   <body>
     <nav>
@@ -22,21 +22,24 @@
       </ul>
     </nav>
     <main>
-      <h1 class="team">More About TDM Waters</h1>
-      <div class="container-fluid">
+      <h1 class="team" data-aos="fade-up"
+     data-aos-anchor-placement="top-bottom" data-aos-delay="200" data-aos-duration="600">More About TDM Waters</h1>
+      <div class="container-fluid about">
         <div class="row">
           <div class="col-7">
-            <h3 class="knowmore">Know More About Us!</h3>
-              <h3 class="aboutdescription">
+            <h3 class="knowmore" data-aos="fade-up"
+     data-aos-anchor-placement="top-bottom" data-aos-delay="300" data-aos-duration="600">Know More About Us!</h3>
+              <h3 class="aboutdescription" data-aos="fade-up"
+     data-aos-anchor-placement="top-bottom" data-aos-delay="500" data-aos-duration="600">
                 <p>Our Company Has Been Worked From 1970's In India. We Provided High Quality Water And Water Purifier Systems To Your Offices And Your Homes.</p>
                 <p>We Know The Importance Of Water Basically, Pure Water So, We Have Been Worked Best For Your Family. Water Is The Main Component Or You Can Say Part Of Our Precious Life So, Our Company will Provide You Best Water Purifiers.</p>
                 <p>As You Know Another Name Of Water Is Life So, We Provid A Watre With Natural PH Balance And Teste. Without This Criteria Your Health May Be In Danger Now Or After.</p>
                 <p>Our Water Purifier Systems Approved By Several Countries (BD, INDIA, USA, UK, UAE) Due To The Purity Of The Water Purifier Systems.</p>
               </h3>
-              <h2 class="greeting">"Drink Pure, Stay Safe, With TDM Waters"</h2>
+              <h2 class="greeting" data-aos="zoom-in-right" data-aos-delay="600">Drink Pure, Stay Safe, With TDM Waters"</h2>
           </div>
           <div class="col-5">
-            <div class="card aboutimg">
+            <div class="card aboutimg" data-aos="zoom-in-right" data-aos-delay="600" data-aos-duration="1000">
               <img src="./images/blackfilter.png" alt="this is img" width="80%">
             </div>
           </div>
@@ -87,19 +90,9 @@
           return false;
         } }
      </script>
-     <script>
-      $(document).ready(function () {
-        $(".team").hide();
-        $(".team").slideDown(1000);
-        $(".aboutdescription").hide();
-        $(".aboutdescription").slideDown(2000);
-        $(".card").hide();
-        $(".card").slideDown(2000);
-        $(".greeting").hide();
-        $(".greeting").slideDown(2000);
-        $(".knowmore").hide();
-        $(".knowmore").slideDown(1500);
-       });
-      </script>
+     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
