--- a/services.html
+++ b/services.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TDM's WATER</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <script src="jquery.js"></script>
   </head>
   <body>
     <nav>
@@ -22,8 +22,8 @@
       </ul>
     </nav>
     <main>
-      <h1 class="team">Our Services</h1>
-      <h3 class="teamdescription">
+      <h1 class="team" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">Our Services</h1>
+      <h3 class="teamdescription" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
         <p>There Are Several Services That Are Mostly </p>
         <p>Provided By TDM Waters.</p>
       </h3>
@@ -41,7 +41,8 @@
                 function(curr,index){
                   return`
                   <div class="col-4">
-            <div class="card">
+            <div class="card" data-aos="fade-up"
+     data-aos-anchor-placement="top-bottom" data-aos-delay="300" data-aos-duration="1000">
               <div class="card-body">
                 <img class="serviceimg" src="${curr.photo}" alt="">
                 <h2 class="card-title">${curr.name}</h2>
@@ -104,15 +105,9 @@
           return false;
         } }
      </script>
-     <script>
-      $(document).ready(function () {
-      $(".team").hide();
-      $(".team").slideDown(2000);
-      $(".teamdescription").hide();
-      $(".teamdescription").slideDown(2000);
-      $(".card-body").hide();
-      $(".card-body").slideDown(2000);
-     });
-     </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>  
 </html>
